syntax = "proto3";
package fraud;

option java_multiple_files = true;
option java_package = "com.demo.insurance.fraudgrpc";
option java_outer_classname = "FraudProto";

service FraudDetectionService {
  rpc Analyze (FraudRequest) returns (FraudReply);
}

message FraudRequest {
  string claimId = 1;
  string policyNumber = 2;
  double claimedAmount = 3;
  string claimType = 4;
}

message FraudReply {
  string risk = 1;       // LOW | MEDIUM | HIGH
  double score = 2;      // 0..1 (simulated)
  string explanation = 3;
}
